# spam_filter_using_FE_and_HE

./: README  Separate private task code.ipynb  categoryIndex  emails_spam_with_collereral_learning.py  emails_spam_with_collereral_learning_running_after_main_task.py  emails_spam_with_collereral_learning_second_phase.py  hidden_2_quantized_output_entire_dataset.npy  label_OR.py
HE-based-solution/spam_filtering_with_BFV_in_SEAL/native/spam_filter/: 1_bfv_basics.cpp  5_rotation.cpp  CMakeLists.txt  bfv_spam_filter.cpp  spam_filter_plaintext.cpp  total_sum.cpp  trec07_spam_filter.cpp
HE-based-solution/spam_filtering_with_BFV_in_SEAL/native/spam_filter/SF_results/: runtime_ceas08_vec_2000_10.csv  runtime_ceas08_vec_2000_5emails_ec2.csv  runtime_ceas08_vec_4000_5emails_ec2.csv  runtime_ceas08_vec_5000_2_pc.csv  runtime_enron_vec_3000_5emails_ec2.csv  runtime_trec07_vec_2000_th_10.csv  runtime_trec07_vec_2000_th_2.csv  runtime_trec07_vec_2000_th_2_.csv  runtime_trec07_vec_2000_th_5_.csv  runtime_trec07_vec_4000.csv  runtime_trec07_vec_4000_th.csv  runtime_trec07_vec_4000_th_10.csv
HE-based-solution/spam_filtering_with_BFV_in_SEAL/native/spam_filter/all_datasets/: reading_npy_csv.py
HE-based-solution/spam_filtering_with_BFV_in_SEAL/native/spam_filter/all_datasets/ceas08-1_dataset/: ceas08_email_vector_length_5000_model_quantized_io_11-04-2021-13_13_50.tflite  ceas_email_Prediction_IG_2000_40_20_10_2_epoch_50.txt
HE-based-solution/spam_filtering_with_BFV_in_SEAL/native/spam_filter/all_datasets/enron_dataset/: enron_1-2_email_Prediction_IG_5000_40_20_10_2_HE_more_emails.txt  enron_comparison_he_fe.py  enron_email_vector_length_3000_model_quantized_io_11-04-2021-15_18_05.tflite  enron_email_vector_length_5000_model_quantized_io_11-04-2021-15_24_14.tflite
HE-based-solution/spam_filtering_with_BFV_in_SEAL/native/spam_filter/all_datasets/trec07_dataset/: trec07_email_Prediction_IG_2000_40_20_10_2.txt  (+5 more)
(+236 files in other folders)
